boreal/tests/assets/invalid_files/compilation/invalid_identifier_type5.yar
// [error: invalid identifier type]
import "pe"

rule c {
    condition:
        pe[2] == /aab/
}

